[gd_scene load_steps=10 format=3 uid="uid://1hm25sspnfju"]

[ext_resource type="Script" path="res://PlayerStuff/UI/character_ui.gd" id="1_5lmgv"]
[ext_resource type="Texture2D" uid="uid://bpt48hsoq7er2" path="res://icon.svg" id="1_sbqu5"]
[ext_resource type="Texture2D" uid="uid://m0pucyrt30os" path="res://Art/#1 - Transparent Icons.png" id="3_enuun"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gna6j"]
bg_color = Color(0.779982, 0, 0.195866, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eh86f"]
bg_color = Color(0, 0.718545, 0.359683, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_24ta0"]
bg_color = Color(0.593255, 0.51, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kl5mq"]
bg_color = Color(1, 1, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfvch"]
resource_local_to_scene = true
atlas = ExtResource("3_enuun")
region = Rect2(290.264, 164.454, 28.0036, 25.9545)

[sub_resource type="AtlasTexture" id="AtlasTexture_3a4rx"]
atlas = ExtResource("3_enuun")
region = Rect2(1.95322, 194.458, 27.9415, 27.3205)

[node name="CharacterPanelUI" type="Control" node_paths=PackedStringArray("phys_ico", "def_ico")]
custom_minimum_size = Vector2(462, 1080)
layout_mode = 3
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -462.0
offset_bottom = 1080.0
grow_horizontal = 0
mouse_filter = 2
script = ExtResource("1_5lmgv")
phys_ico = NodePath("Icons/PhysIco")
def_ico = NodePath("Icons/DefIco")

[node name="Portrait" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 43.0
offset_right = 64.0
offset_bottom = 171.0
grow_horizontal = 2
texture = ExtResource("1_sbqu5")

[node name="CharacterInfo" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.0
offset_right = 61.0
offset_bottom = 69.0
grow_horizontal = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]James
Paladin - 5[/center]"
fit_content = true

[node name="Health" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 192.0
offset_bottom = 192.0
grow_horizontal = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]Health[/center]"
fit_content = true

[node name="HealthBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(150, 26)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -322.0
offset_right = 75.0
offset_bottom = -295.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_gna6j")
theme_override_styles/fill = SubResource("StyleBoxFlat_eh86f")
value = 25.0

[node name="Sanity" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 246.0
offset_bottom = 269.0
grow_horizontal = 2
mouse_filter = 1
bbcode_enabled = true
text = "[center]Sanity[/center]"
fit_content = true

[node name="SanityBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(150, 26)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -269.0
offset_right = 75.0
offset_bottom = -242.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/background = SubResource("StyleBoxFlat_24ta0")
theme_override_styles/fill = SubResource("StyleBoxFlat_kl5mq")
value = 50.0

[node name="Stats" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -219.0
offset_bottom = 74.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1

[node name="RichTextLabel" type="RichTextLabel" parent="Stats"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true

[node name="MainStats" type="Control" parent="Stats"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BraveryLabel" type="Label" parent="Stats/MainStats"]
layout_mode = 2
offset_top = 7.0
offset_right = 61.0
offset_bottom = 30.0
text = "Bravery"

[node name="BraveryText" type="Panel" parent="Stats/MainStats/BraveryLabel"]
layout_mode = 0
offset_left = 83.0
offset_top = -5.0
offset_right = 123.0
offset_bottom = 35.0

[node name="BraveryValue" type="Label" parent="Stats/MainStats/BraveryLabel/BraveryText"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="ReactionLabel" type="Label" parent="Stats/MainStats"]
layout_mode = 2
offset_top = 49.0
offset_right = 61.0
offset_bottom = 72.0
text = "Reaction"

[node name="ReactionText" type="Panel" parent="Stats/MainStats/ReactionLabel"]
layout_mode = 0
offset_left = 83.0
offset_top = -5.0
offset_right = 123.0
offset_bottom = 35.0

[node name="ReactValue" type="Label" parent="Stats/MainStats/ReactionLabel/ReactionText"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="WillPowerLabel" type="Label" parent="Stats/MainStats"]
layout_mode = 2
offset_top = 92.0
offset_right = 68.0
offset_bottom = 115.0
text = "WillPower"

[node name="WillpowerText" type="Panel" parent="Stats/MainStats/WillPowerLabel"]
layout_mode = 0
offset_left = 83.0
offset_top = -5.0
offset_right = 123.0
offset_bottom = 35.0

[node name="WillValue" type="Label" parent="Stats/MainStats/WillPowerLabel/WillpowerText"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -1.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="PhysPower" type="Label" parent="Stats/MainStats"]
layout_mode = 0
offset_left = 15.0
offset_top = 130.0
offset_right = 55.0
offset_bottom = 153.0
text = "PHY"

[node name="Panel" type="Panel" parent="Stats/MainStats/PhysPower"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -4.0
offset_top = 19.0
offset_right = -4.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="PhysPowValue" type="Label" parent="Stats/MainStats/PhysPower/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "555"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MagPower" type="Label" parent="Stats/MainStats"]
layout_mode = 0
offset_left = 81.0
offset_top = 130.0
offset_right = 122.0
offset_bottom = 153.0
text = "MAG"

[node name="Panel2" type="Panel" parent="Stats/MainStats/MagPower"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -2.0
offset_top = 20.0
offset_right = -2.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MagPowValue" type="Label" parent="Stats/MainStats/MagPower/Panel2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "555"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Actions" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -389.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="RichTextLabel" type="RichTextLabel" parent="Actions"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -270.5
offset_bottom = -247.5
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "[center]Actions[/center]
"
fit_content = true

[node name="ActionHolder" type="VBoxContainer" parent="Actions"]
layout_mode = 0
offset_right = 460.0
offset_bottom = 259.0
mouse_filter = 2

[node name="PhysActions" type="HBoxContainer" parent="Actions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -48.0
offset_right = -271.0
offset_bottom = -403.0
grow_horizontal = 2
grow_vertical = 2

[node name="DefActions" type="HBoxContainer" parent="Actions"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 274.0
offset_top = -48.0
offset_right = -1.0
offset_bottom = -403.0
grow_horizontal = 2
grow_vertical = 2

[node name="Icons" type="Node" parent="."]

[node name="PhysIco" type="TextureRect" parent="Icons"]
visible = false
custom_minimum_size = Vector2(32, 32)
offset_left = 1462.0
offset_top = 643.0
offset_right = 1494.0
offset_bottom = 677.0
texture = SubResource("AtlasTexture_pfvch")
expand_mode = 1

[node name="DefIco" type="TextureRect" parent="Icons"]
visible = false
custom_minimum_size = Vector2(32, 32)
offset_left = 1524.0
offset_top = 642.0
offset_right = 1556.0
offset_bottom = 676.0
texture = SubResource("AtlasTexture_3a4rx")
expand_mode = 1
